# scion-sdk

./: .gitattributes  .gitignore  Cargo.toml  README.md  clippy.toml  dev-env.nix  flake.nix  license_header.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
anapaya-aa/anapaya-aa-client/: Cargo.toml
anapaya-aa/anapaya-aa-client/src/: client.rs  lib.rs  refresher.rs
anapaya-aa/anapaya-aa-protobuf/: Cargo.toml
crates/libs/anapaya-edge-tun/: Cargo.toml
crates/libs/dhsd/: Cargo.toml
crates/libs/scion-connect-rpc/: Cargo.toml
crates/libs/scion-sdk-utils/: Cargo.toml
crates/scion-stack/: Cargo.toml
crates/scion-stack/examples/: udp_echo.rs  udp_path_policy.rs
crates/scion-stack/src/: ea_source.rs  internal.rs  lib.rs  underlays.rs
crates/scion-stack/tests/: basic_functionality.rs  endhost_api_discovery.rs  failover.rs  public_api_reexports.rs  scmp.rs  token_renewal.rs
endhost-api-discovery/ead-api/: Cargo.toml
endhost-api-discovery/ead-api/src/: lib.rs  routes.rs
endhost-api-discovery/ead-client/: Cargo.toml
endhost-api-discovery/ead-client/src/: client.rs
endhost-api-discovery/ead-models/: Cargo.toml
endhost-api-discovery/ead-models/protobuf/: endhost.discovery.v1.proto
endhost-api-discovery/ead-models/src/: model.rs  proto.rs
hsd-api/hsd-api-client/: Cargo.toml  README.md
hsd-api/hsd-api-client/src/: client.rs  lib.rs
hsd-api/hsd-api-protobuf/: Cargo.toml
hsd-api/hsd-api-protobuf/src/: convert.rs  lib.rs
libs/dhsd/: Cargo.toml  README.md
libs/dhsd/src/: dhsd_state.rs
libs/edge-tun/: Cargo.toml  README.md  build.rs
libs/edge-tun/protobuf/: anapaya.edgetun.v1.proto
libs/edge-tun/src/: address_allocation.rs  client.rs  control.rs  fragmenting.rs  ip.rs  lib.rs  metrics.rs  ng.rs  requests.rs  server.rs  test_util.rs  tunnel.rs  wg.rs
libs/edge-tun/tests/: all.rs  ng_api.rs
libs/quic-scion/: Cargo.toml
libs/quic-scion/src/: buf_factory.rs  client.rs  h3.rs  http.rs  lib.rs  quic.rs  socket.rs
libs/quic-scion/tests/: common.rs  http3.rs  http3_client.rs  http3_service.rs  quic.rs  server_endpoint.rs
libs/scion-connect-rpc/: Cargo.toml
libs/scion-connect-rpc/src/: client.rs
libs/scion-connect-rpc/tests/: crpc_client.rs
libs/scion-h3-axum/: Cargo.toml
libs/scion-h3-axum/src/: lib.rs
pocketscion/: Cargo.toml  README.md
pocketscion/examples/: server_client.rs
pocketscion/src/: cli.rs  comp.rs  dto.rs  endhost_api.rs  io_config.rs  lib.rs  management_api.rs  runtime.rs  state.rs  topologies.rs  util.rs
pocketscion/src/authorization_server/: api.rs  token_exchanger.rs
pocketscion/src/comp/: authorization_server.rs  control_service.rs  daemon.rs  echo_responder.rs  endhost_api.rs  endhost_api_discovery.rs  endhost_segment_lister.rs  external_as.rs  network_forwarder.rs  network_simulation.rs  router.rs  sim_network_stack.rs  simulation_dispatcher.rs  snap.rs
pocketscion/src/network/: scion.rs  simulator.rs
pocketscion/src/runtime/: api.rs  builder.rs
pocketscion/src/state/: address_allocator.rs  control_service.rs  endhost_api_discovery.rs  endhost_segment_lister.rs  external_as.rs  network_forwarder.rs  network_sim_socket.rs  sim_network_stack.rs  simulation_dispatcher.rs  snap.rs
pocketscion/src/topologies/: minimal.rs
pocketscion/src/util/: cert_tmp_dir.rs  crpc.rs  path_providers.rs  serde_ext.rs  topologies.rs
pocketscion/tests/: crpc-daemon.rs  crpc-segment-lookup.rs  echo_responder.rs  endhost-api.rs  external-as.rs  grpc-daemon.rs  network-forwarder.rs  router_mode.rs  runtime.rs  scmp.rs  topology.rs
scion-proto/scion-proto/: Cargo.toml
scion-proto/scion-proto/benches/: checksum.rs
scion-proto/scion-proto/src/: control_plane.rs  lib.rs  packet.rs  path.rs  wire_encoding.rs
scion-proto/sciparse/: Cargo.toml  README.md
scion-proto/sciparse-interop/: Cargo.toml
scion-proto/sciparse-interop/benches/: bench.rs
scion-proto/sciparse-interop/src/: lib.rs
scion-proto/sciparse-interop/tests/: sciparse_scionproto.rs
scion-proto/sciparse/examples/: packet_typing.rs  request_response.rs
scion-proto/sciparse/fuzz/: Cargo.toml  gen-report.sh  run-fuzz.sh
scion-proto/sciparse/src/: core.rs  helper.rs  lib.rs  main.rs  proto.rs  scion.rs  traits.rs  util.rs
scion-proto/sciparse/tests/: en_decoding.rs  header_en_decode.rs  packet_decode_malformed_wire.rs  packet_decode_random_data.rs  packet_en_decode.rs  packet_encode_invalid_model.rs  packet_roundtrip.rs  scmp_en_decode.rs
scion-stack/: API_CONVENTIONS.md  Cargo.toml  README.md
scion-stack/examples/: server_client.rs  udp_echo.rs  udp_paths.rs
scion-stack/examples/common/: mod.rs
scion-stack/src/: aa_client.rs  allocation.rs  ea_source.rs  lib.rs  path.rs  quic.rs  resolver.rs  scionstack.rs  snap_tunnel.rs  stack.rs  types.rs  underlays.rs
scion-stack/src/path/: fetcher.rs  manager.rs  multipath_manager.rs  strategy.rs  types.rs
scion-stack/src/resolver/: txt.rs
scion-stack/src/scionstack/: builder.rs  quic.rs  scmp_handler.rs  socket.rs
scion-stack/src/stack/: builder.rs  socket.rs
scion-stack/src/underlays/: discovery.rs  snap.rs  snap_ng.rs  udp.rs  v2.rs
scion-stack/tests/: auth_server.rs  basic_functionality.rs  endhost_api_discovery.rs  error_handling.rs  failover.rs  multi_client.rs  public_api_reexports.rs  quic.rs  scmp.rs  token_renewal.rs  topology.rs  txt_resolver_integration.rs
snap/snap-control/: Cargo.toml
snap/snap-control/protobuf/: anapaya.snap.v1.api_service.proto
snap/snap-control/src/: client.rs  lib.rs  model.rs  pg_wap.rs  server.rs
snap/snap-dataplane/: Cargo.toml
snap/snap-dataplane/src/: lib.rs  state.rs  tunnel_gateway.rs  tunnel_gateway_deprecated.rs
snap/snap-tokens/: Cargo.toml
snap/snap-tokens/src/: lib.rs  session_token.rs  snap_token.rs  v0.rs
snap/snap-tun/: Cargo.toml
snap/snap-tun/benches/: udp_batch.rs
snap/snap-tun/src/: cert_validator.rs  client.rs  lib.rs  requests.rs  scion_packet.rs  server.rs  server_deprecated.rs
snap/snap-tun/tests/: all.rs  integration_tests.rs
tools/proto-gen/: Cargo.toml
tools/proto-gen/src/: main.rs
(+604 files in other folders)
