[workspace]
resolver = "2"

members = [
    "crates/apis/anapaya-aa/*",
    "crates/apis/anapaya-ead/*",
    "crates/apis/anapaya-hsd-api/*",
    "crates/apis/endhost-api/*",
    "crates/libs/*",
    "crates/pocketscion",
    "crates/scion-stack",
    "crates/snap/*",
    "tools/proto-gen",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Local Crates
dhsd = { path = "crates/libs/dhsd", version = "0.5.2" }

endhost-api-client = { path = "crates/apis/endhost-api/endhost-api-client", version = "0.5.2" }
endhost-api = { path = "crates/apis/endhost-api/endhost-api", version = "0.5.2" }
endhost-api-models = { path = "crates/apis/endhost-api/endhost-api-models", version = "0.5.2" }
endhost-api-protobuf = { path = "crates/apis/endhost-api/endhost-api-protobuf", version = "0.5.2" }

anapaya-ead-client = { path = "crates/apis/anapaya-ead/anapaya-ead-client", version = "0.5.2" }
anapaya-ead-api = { path = "crates/apis/anapaya-ead/anapaya-ead-api", version = "0.5.2" }
anapaya-ead-models = { path = "crates/apis/anapaya-ead/anapaya-ead-models", version = "0.5.2" }


# hsd-api = { path = "crates/apis/anapaya-hsd-api/hsd-api", version = "0.2" }
# anapaya-hsd-api-protobuf = { path = "crates/apis/anapaya-hsd-api/anapaya-hsd-api-protobuf", version = "0.2" }
# anapaya-hsd-api-client = { path = "crates/apis/anapaya-hsd-api/anapaya-hsd-api-client", version = "0.3" }
anapaya-hsd-api-protobuf = { path = "crates/apis/anapaya-hsd-api/anapaya-hsd-api-protobuf", version = "0.5.2" }

anapaya-aa-protobuf = { path = "crates/apis/anapaya-aa/anapaya-aa-protobuf", version = "0.5.2" }

axum-connect-rpc = { path = "crates/libs/axum-connect-rpc", version = "0.5.2" }
scion-h3-axum = { path = "crates/libs/scion-h3-axum", version = "0.5.2" }
# scion-sdk-common-types = { path = "crates/libs/scion-sdk-common-types", version = "0.2" }
scion-sdk-observability = { path = "crates/libs/scion-sdk-observability", version = "0.5.2" }
scion-quic = { path = "crates/libs/scion-quic", version = "0.5.2" }
reqwest-connect-rpc = { path = "crates/libs/reqwest-connect-rpc", version = "0.5.2" }
scion-connect-rpc = { path = "crates/libs/scion-connect-rpc", version = "0.5.2" }
scion-trc = { path = "crates/libs/scion-trc", version = "0.5.2" }
scion-sdk-token-validator = { path = "crates/libs/scion-sdk-token-validator", version = "0.5.2" }
scion-sdk-utils = { path = "crates/libs/scion-sdk-utils", version = "0.5.2" }

pocketscion = { path = "crates/pocketscion", version = "0.5.2" }

scion-protobuf = { path = "crates/libs/scion-protobuf", version = "0.5.2" }
sciparse = { path = "crates/libs/sciparse", version = "0.5.2" }

snap-control = { path = "crates/snap/snap-control", version = "0.5.2" }
snap-dataplane = { path = "crates/snap/snap-dataplane", version = "0.5.2" }
snap-tun = { path = "crates/snap/snap-tun", version = "0.5.2" }
snap-tokens = { path = "crates/snap/snap-tokens", version = "0.5.2" }

scion-stack = { path = "crates/scion-stack", version = "0.5.2" }

# General Dependencies
aes = "0.8"
# We use our own version here
ana-gotatun = { version = "0.2.1-ana.0" }
anyhow = { version = "1" }
arc-swap = "1.7"
async-channel = "2.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["http2"] }
axum-client-ip = "1.3.1"
axum-server = { version = "0.8", features = ["tls-rustls"] }
bitfield-struct = "0.12.1"
base64 = "0.22.1"
byteorder = "1.5"
bytes = "1.10"
bitflags = "2.10"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.5"
cmac = "0.7"
cms = "0.2"
criterion = "0.8"
derive_more = { version = "2.0", features = ["display", "deref"] }
der = { version = "0.7", features = ["pem", "derive"] }
ecdsa = { version = "0.16", features = ["arithmetic"] }
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem"] }
foldhash = "0.2"
futures = "0.3"
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }
hickory-server = "0.25"
http = "1.3"
http-body = "1.0"
ipnet = "2.11"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
mockall = "0.14"
num-traits = "0.2"
ntest = "0.9"
paste = "1.0"
p256 = "0.13"
pem = "3.0"
prometheus = { version = "0.14", features = ["process"] }
proptest = "1.9"
proptest-derive = "0.8"
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
quinn-udp = "0.5.14"
rand = "0.10"
rayon = "1.12"
chacha20 = { version = "0.10" }
rand_xorshift = "0.5"
rcgen = "0.14"
regex = "1.12.2"
reqwest = { version = "0.13", features = [
    "charset",
    "http2",
    "json",
    "form",
    # Don't use the "rustls" feature to avoid pulling in aws-lc-rs dependency,
    # we explicitly depend on "ring" instead.
    "rustls-no-provider",
], default-features = false }
ring = "0.17.14"
rustls = { version = "0.23", features = [
    "ring",
    "std",
    "brotli",
], default-features = false }
scc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14"
serde_yaml_ng = "0.10"
sha2 = "0.10"
socket2 = "0.6.1"
squiche = "0.24.8-ana.3"
tempfile = "3.23"
test-log = { version = "0.2", features = ["trace"] }
thiserror = "2.0"
tinyvec = { version = "1.10", features = ["alloc"]}
tokio = { version = "1.45", features = ["full"] }
# Stock (BoringSSL/quiche-based) async QUIC implementation, used in tests to
# exercise the squiche-based server endpoint against an established peer.
tokio-quiche = { version = "0.19", default-features = false }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7"
tonic = { version = "0.14", features = ["router"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-log = "0.2"
url = { version = "2.5", features = ["serde"] }
utoipa = { version = "5.4", features = ["chrono", "url", "uuid"] }
utoipa-axum = "0.2"
utoipa-redoc = { version = "6.0", features = ["axum"] }
uuid = "1.16"
walkdir = "2.5"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }
x509-cert = "0.2"
zerocopy = { version = "0.8.27", features = ["std", "derive"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }


[workspace.lints.clippy]
mem_forget = "deny"

[workspace.lints.rust]
missing_docs = "warn"
# `fuzzing` is set by cargo-fuzz; declare it so builds enabling the `fuzz`
# feature outside cargo-fuzz (e.g. `cargo bench`) don't trip unexpected_cfgs.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.metadata.cargo-shear]
ignored = [
    "foldhash",
    "anapaya-ead-api",
    "anapaya-ead-client",
    "serde_yaml_ng"
]

[profile.ci]
inherits = "dev"            # https://doc.rust-lang.org/cargo/reference/profiles.html#dev
incremental = false         # Disable incremental compilation to allow caching dependencies

# Profile for inspecting generated assembly with full inlining across crate boundaries
[profile.asm]
inherits = "release"
lto = true
codegen-units = 1
