[package]
name = "pocketscion"
version = "0.5.2"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "A lightweight SCION network simulator"
readme = "README.md"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
# Local Dependencies
dhsd = { workspace = true }
scion-sdk-axum-connect-rpc = { workspace = true }
scion-sdk-observability = { workspace = true }
scion-sdk-scion-connect-rpc = { workspace = true }
scion-sdk-quic-scion = { workspace = true }
scion-sdk-token-validator = { workspace = true }
scion-sdk-trc = { workspace = true }
scion-sdk-utils = { workspace = true }

sciparse = { workspace = true }
scion-proto = { workspace = true }
scion-protobuf = { workspace = true }

snap-control = { workspace = true }
snap-dataplane = { workspace = true }
snap-tokens = { workspace = true }

endhost-api = { workspace = true }
endhost-api-models = { workspace = true }

endhost-api-discovery-api = { workspace = true }
endhost-api-discovery-models = { workspace = true }

# General Dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
ecdsa = { workspace = true }
ed25519-dalek = { workspace = true }
http = { workspace = true }
ipnet = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
p256 = { workspace = true }
paste = { workspace = true }
pem = { workspace = true, features = ["serde"] }
prost = { workspace = true }
rayon = { workspace = true }
rcgen = { workspace = true, features = ["x509-parser", "pem"] }
reqwest = { workspace = true, features = ["json", "blocking"] }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true, features = ["limit", "buffer"] }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["yaml", "time"] }
utoipa-axum = { workspace = true }
utoipa-redoc = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["serde", "v4"] }
x25519-dalek = { workspace = true }
x509-cert = { workspace = true }


[dev-dependencies]
endhost-api-client = { workspace = true }
ntest = { workspace = true }
snap-tokens = { workspace = true }
tonic = { workspace = true }

[lints]
workspace = true
