[package]
name = "scion-stack"
version = "0.3.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION endhost network stack"
readme = "README.md"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
endhost-api-client = { workspace = true }
foldhash = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
scc = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-reqwest-connect-rpc = { workspace = true }
scion-sdk-utils = { workspace = true }
snap-control = { workspace = true }
snap-tun = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
mockall = "0.13"
test-log = { workspace = true }

[lints]
workspace = true

[target."cfg(windows)".dependencies]
windows-sys = "0.61.2"

# If you believe cargo-machete has detected an unused dependency incorrectly,
# you can add the dependency to the list of dependencies to ignore in the
# `[package.metadata.cargo-machete]` section of the appropriate Cargo.toml.
[package.metadata.cargo-shear]
ignored = ["prost"]
