[package]
name = "anapaya-aa-protobuf"
version = "0.5.1"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Protobuf definitions for the Anapaya AA (Auth/n Auth/z) service"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking", "Anapaya"]

[dependencies]
prost = { workspace = true }

[lints]
workspace = true
