[package]
name = "endhost-api-discovery-client"
version = "0.4.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION endhost API discovery client"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
# local
endhost-api-discovery-models = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-reqwest-connect-rpc = { workspace = true }

# global
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
