[package]
name = "endhost-api-discovery-models"
version = "0.4.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Protobuf definitions for the SCION endhost API"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
url = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

prost = { workspace = true, optional = true }

[features]
protobuf = ["prost"]
default = ["protobuf"]

[lints]
workspace = true
