[package]
name = "hsd-api-protobuf"
version = "0.4.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Protobuf definitions for the HSD API"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
# Local Dependencies
scion-protobuf = { workspace = true }
scion-proto = { workspace = true }

# Global Dependencies
prost = { workspace = true }

[lints]
workspace = true
