[package]
name = "scion-sdk-quic-scion"
version = "0.5.2"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "QUIC via SCION as transport"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["HTTP3", "QUIC", "SCION"]

[dependencies]
async-trait = { workspace = true }
buffer-pool = { workspace = true }
http = { workspace = true }
ring = { workspace = true }
scion-proto = { workspace = true }
squiche = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
ntest = { workspace = true }
rcgen = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
