[package]
name = "scion-sdk-scion-h3-axum"
version = "0.5.2"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION SDK Axum HTTP/3 server"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]


[dependencies]
axum = { workspace = true }
scion-sdk-quic-scion = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
