
[package]
name = "scion-proto"
version = "0.5.1"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION protocol data structures and serialization"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
aes = { workspace = true }
bytes = { workspace = true }
cmac = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ecdsa = { workspace = true }
p256 = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
scion-protobuf = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
sciparse = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
criterion = { workspace = true }
prost-types = { workspace = true }
rand_xorshift = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio = { version = "1.45.1", features = [
    "test-util",
    "tokio-macros",
    "macros",
] }

[[bench]]
name = "checksum"
harness = false

[lints]
workspace = true
