[package]
name = "sciparse-interop"
publish = false
edition = { workspace = true }
license = "Apache-2.0"
description = "Interop tests for sciparse"
repository = "https://github.com/anapaya/scion-sdk"

[dependencies]
bytes = { workspace = true }
sciparse = { workspace = true }
scion-proto = { workspace = true }
proptest = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
criterion = { workspace = true }
scion-proto = { path = "../scion-proto" }

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
