[package]
name = "sciparse-interop"
publish = false
edition = { workspace = true }
license = "Apache-2.0"
description = "Interop tests for sciparse"
repository = "https://github.com/anapaya/scion-sdk"

[dependencies]
bytes = { workspace = true }
sciparse = { workspace = true }
proptest = { workspace = true }
# using an older version of scion-proto because bazel rules get confused with
# having a scion-protobuf locally with the same version as the one scion-proto depends on.
# Can be updated to 0.5, when our workspace is updated to 0.6
scion-proto = "0.4"

[dev-dependencies]
bytes = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
