[package]
name = "sciparse"
publish = false
edition = { workspace = true }

[dependencies]
aes = { workspace = true }
cmac = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
tinyvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }

[lints]
workspace = true
