[package]
name = "snap-control"
version = "0.4.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Control plane implementation of the SNAP transport underlay for SCION"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
mockall = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true, features = ["limit", "buffer"] }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["yaml", "time"] }
x25519-dalek = { workspace = true }

# Local dependencies
endhost-api = { workspace = true }
endhost-api-client = { workspace = true }
endhost-api-models = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-axum-connect-rpc = { workspace = true }
scion-sdk-observability = { workspace = true }
scion-sdk-reqwest-connect-rpc = { workspace = true }
scion-sdk-token-validator = { workspace = true }
snap-tokens = { workspace = true }
snap-tun = { workspace = true }

[lints]
workspace = true

[build-dependencies]
prost-build = { workspace = true, features = ["cleanup-markdown"] }
