[package]
name = "snap-dataplane"
version = "0.3.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Data plane implementation of the SNAP transport underlay for SCION"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
ana-gotatun = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
x25519-dalek = { workspace = true }
prometheus = { workspace = true }
quinn = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["yaml", "time"] }

# Local dependencies
scion-proto = { workspace = true }
scion-sdk-observability = { workspace = true }
scion-sdk-token-validator = { workspace = true }
scion-sdk-utils = { workspace = true }
snap-tun = { workspace = true }

[lints]
workspace = true
