[package]
name = "snap-tokens"
version = "0.3.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "AuthN/AuthZ tokens used in the SNAP transport underlay for SCION"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
pem = { workspace = true }
scion-sdk-token-validator = { workspace = true }
scion-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }

[lints]
workspace = true
