[package]
name = "snap-tun"
version = "0.4.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "The snap-tun implementation for the SNAP transport underlay for SCION"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
ana-gotatun = { workspace = true }
bitfield-struct = { workspace = true }
bytes = { workspace = true }
prometheus = { workspace = true }
quinn = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-observability = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
x509-cert = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
pem = { workspace = true }
rcgen = { workspace = true }

[lints]
workspace = true
