[package]
name = "proto-gen"
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
prost-build = { workspace = true }

tempfile = { workspace = true }
tonic-prost-build = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true

[package.metadata.release]
publish = false
