[package]
name = "proto-gen"
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "A tool to compile all protobuf definitions to Rust code"
repository = "https://github.com/anapaya/scion-sdk"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
prost-build = { workspace = true }

tempfile = { workspace = true }
tonic-prost-build = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true

[package.metadata.release]
publish = false
